<resources>
    <string name="app_name" translatable="false">Impex Insurance</string>
    <string name="language_choose_title">Выберите язык</string>
    <string name="language_choose_desc">Добро пожаловать в приложение Impex Insurance, выберите свой язык.</string>
    <string name="language_button_title">Продолжить</string>
    <string name="hello_blank_fragment" translatable="false">""</string>
    <string name="category_item1">Все</string>
    <string name="category_item2">Авто</string>
    <string name="category_item3">Путешествия</string>
    <string name="send_otp">Отправить код</string>
    <string name="phone_des_register">Введите свой номер телефона, мы отправим код \nподтверждения на вашу телефон</string>
    <string name="register_title">Номер телефона</string>
    <string name="otp_des">Пожалуйста, введите код, который вы отправили на </string>
    <string name="otp_title">Подтвердить код</string>
    <string name="logout">Выйти</string>
    <string name="_998_mask" translatable="false">(##) ### ## ##</string>
    <string name="_998" translatable="false">(99) 123 45 67</string>
    <string name="skip_intro">Пропустить</string>
    <string name="intro_page_one_title">Получить страховой полис онлайн за 5 минут</string>
    <string name="intro_page_two_ttle">Автоматически заполним данные</string>
    <string name="intro_page_one_desc">Сравним цены от 20 разных страховых и поможем выбрать самую низкую</string>
    <string name="intro_page_two_desc">Загрузим информацию из баз данных. Данные не нужно будет вводить вручную</string>
    <string name="intropage_third_title">Живая и дружелюбная 24/7 техническая поддержка</string>
    <string name="intropage_third_desc">Оперативно придём на помощь и поможем решить все проблемы</string>
    <string name="success_otp_title">Учетная запись подтверждена</string>
    <string name="success_otp_desc">Ваша учетная запись успешно подтверждена, теперь давайте наслаждаться функциями Epolis</string>
    <string name="success_otp_btn_title">Подтвердить</string>
    <string name="edit_profile_title">Информация профиля</string>
    <string name="add_profile_picture_txt">Добавить изображение</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="save">Сохранять</string>
    <string name="phone">Номер телефона</string>
    <string name="save_profile">Сохранить изменения</string>
    <string name="intro_btn_txt">Начать пользоваться</string>
    <string name="add_driver">Добавить водителя</string>
    <string name="title_contact_us">Центр помощи</string>
    <string name="contact_us_title">Как мы можем помочь?</string>
    <string name="contact_us_desc">Не нашли ответ, который искали? Свяжитесь с нашим центром поддержки!</string>
    <string name="contact_question_title">Популярные вопросы</string>
    <string name="resend_otp_title">Повторно отправить код через</string>
    <string name="register_txt">Регистрация</string>
    <string name="home">Главная</string>
    <string name="my_polis">Мои полисы</string>
    <string name="profile">Профиль</string>
    <string name="agree_txt">Лицензионное соглашение</string>
    <string name="all">Все</string>
    <string name="add_polis_info">Вы можете добавить полис</string>
    <string name="working">Действующие</string>
    <string name="polis_empty">У вас еще нет страховки. Купите или добавить страховку</string>
    <string name="archive">Архиные</string>
    <string name="polis_not_Register_des">Сначала зарегистрируйтесь, чтобы добавить \n или приобрести страховой полис</string>
    <string name="reset">Продлить</string>
    <string name="item_name">ОСАГО</string>
    <string name="add_polis">Добавить полис</string>
    <string name="agree_info">Перед использованием Решения (см. определение ниже) внимательно ознакомьтесь с условиями данного Лицензионного соглашения с конечным пользователем (далее — «Соглашение»). Данный текст является юридически обязывающим договором. Давая согласие в электронной форме, устанавливая Решение или используя Решение, вы принимаете все условия настоящего Соглашения от своего лица и любой организации и физического лица, которое вы представляете или для чьего Устройства вы приобретаете Решение (в совокупности «вы»). Если вы не согласны с условиями данного Соглашения, не продолжайте процесс установки Решения, не используйте его и удалите или уничтожьте все его копии, которые у вас имеются или которыми вы распоряжаетесь. Данное Соглашение относится к использованию вами определенных служб и программного обеспечения, включая Обновления (каждое — «Решение»), в связи с которым вы принимаете данное Соглашение, и всей связанной Документации. В настоящем Соглашении «Поставщик» обозначает организацию, определенную здесь, как предоставляющую Решение вам; «Документация» обозначает любые руководства пользователей и инструкции, предоставляемые с Решением; а «Применимые условия» обозначают в совокупности Срок подписки вместе с типами Устройств, Разрешенным количеством устройств, прочими условиями транзакций, условиями и документами, принятыми вами при покупке Решения (включая условия продажи), а также любое соглашение с дистрибьютором, реселлером, партнером или иное соглашение между вами и Поставщиком или другим участником Группы поставщика, а также прочие ограничения, описываемые в Разделе 2 и в Документации. раве прекратить использование вами такого затронутого Решения. В этом случае вы имеете п раво на возмещение оплаченной стоимости той части Срока подписки, который еще не истек или не был использован. Соответствующие инструкции можно найти здесь. 1. ЛИЦЕНЗИЯв использовании соответствующего Решения или Устройства (либо определенных функций Устройства) до тех пор, пока не будет завершена полная установка или активация Обновления. Каждое Обновление будет считаться частью Решения во всем, что касается настоящего Соглашения. Обновление может быть представлено в виде какого-либо дополнения, удаления любой конкретной функции или возможности Решения или его полной замены. При этом содержание, а также функции и возможности обновленного Решения определяет исключительно Поставщик. От Поставщика не требуется предлагать вам возможность отказываться от Обновлений или задерживать их установку, но, в любом случае, вам может потребоваться скачать и разрешить установку или активацию всех доступных Обновлений для того, чтобы воспользоваться всеми преимуществами Решения. Поставщик может прекратить предоставление поддержки Решения до тех пор, пока вы не примете, не установите или не активируете все Обновления. Необходимость и периодичность предоставления Обновлений определяется Поставщиком по его собственному усмотрению, причем предоставление вам Обновлений не является обязательством Поставщика. Поставщик может по собственному усмотрению прекратить предоставление Обновлений для любой версии Решения, кроме наиболее новой версии, или же Обновлений, которые поддерживают использование Решения с любой версией операционных систем, программ электронной почты, браузеров и другого программного обеспечения, для работы с которым предназначено Решение.</string>
    <string name="privacy_description">Перед использованием Решения (см. определение ниже) внимательно ознакомьтесь с условиями данного Лицензионного соглашения с конечным пользователем (далее — «Соглашение»). Данный текст является юридически обязывающим договором. Давая согласие в электронной форме, устанавливая Решение или используя Решение, вы принимаете все условия настоящего Соглашения от своего лица и любой организации и физического лица, которое вы представляете или для чьего Устройства вы приобретаете Решение (в совокупности «вы»). Если вы не согласны с условиями данного Соглашения, не продолжайте процесс установки Решения, не используйте его и удалите или уничтожьте все его копии, которые у вас имеются или которыми вы распоряжаетесь. Данное Соглашение относится к использованию вами определенных служб и программного обеспечения, включая Обновления (каждое — «Решение»), в связи с которым вы принимаете данное Соглашение, и всей связанной Документации. В настоящем Соглашении «Поставщик» обозначает организацию, определенную здесь, как предоставляющую Решение вам; «Документация» обозначает любые руководства пользователей и инструкции, предоставляемые с Решением; а «Применимые условия» обозначают в совокупности Срок подписки вместе с типами Устройств, Разрешенным количеством устройств, прочими условиями транзакций, условиями и документами, принятыми вами при покупке Решения (включая условия продажи), а также любое соглашение с дистрибьютором, реселлером, партнером или иное соглашение между вами и Поставщиком или другим участником Группы поставщика, а также прочие ограничения, описываемые в Разделе 2 и в Документации. раве прекратить использование вами такого затронутого Решения. В этом случае вы имеете п раво на возмещение оплаченной стоимости той части Срока подписки, который еще не истек или не был использован. Соответствующие инструкции можно найти здесь. 1. ЛИЦЕНЗИЯв использовании соответствующего Решения или Устройства (либо определенных функций Устройства) до тех пор, пока не будет завершена полная установка или активация Обновления. Каждое Обновление будет считаться частью Решения во всем, что касается настоящего Соглашения. Обновление может быть представлено в виде какого-либо дополнения, удаления любой конкретной функции или возможности Решения или его полной замены. При этом содержание, а также функции и возможности обновленного Решения определяет исключительно Поставщик. От Поставщика не требуется предлагать вам возможность отказываться от Обновлений или задерживать их установку, но, в любом случае, вам может потребоваться скачать и разрешить установку или активацию всех доступных Обновлений для того, чтобы воспользоваться всеми преимуществами Решения. Поставщик может прекратить предоставление поддержки Решения до тех пор, пока вы не примете, не установите или не активируете все Обновления. Необходимость и периодичность предоставления Обновлений определяется Поставщиком по его собственному усмотрению, причем предоставление вам Обновлений не является обязательством Поставщика. Поставщик может по собственному усмотрению прекратить предоставление Обновлений для любой версии Решения, кроме наиболее новой версии, или же Обновлений, которые поддерживают использование Решения с любой версией операционных систем, программ электронной почты, браузеров и другого программного обеспечения, для работы с которым предназначено Решение.</string>
    <string name="agree_title">Я полностью согласен с условиями Пользователкого соглашения</string>
    <string name="next_btn">Продолжить</string>
    <string name="russian_yazik">русский язык</string>
    <string name="dont_have_code">Повторно отправить код</string>
    <string name="error_">Нет соединения</string>
    <string name="error_code">Введена ошибка кода!</string>
    <string name="error_api">Произошла ошибка. проверьте и попробуйте еще раз</string>
    <string name="code_resend">Код повторно отправлен!</string>
    <string name="sms_code_error">Введите SMS-код правильно!</string>
    <string name="error_phone">Номер телефона был введен неверно!</string>
    <string name="code_error">Код был введен неправильно!</string>
    <string name="profile_item1">Имя Фамилия</string>
    <string name="profile_item2">Информация профиля</string>
    <string name="profile_item3">Язык приложения</string>
    <string name="profile_item4">Напоминания</string>
    <string name="profile_item5">О Нас</string>
    <string name="profile_item6">Центр помощи</string>
    <string name="contact_us1">Какие виды страхования я могу приобрести через это приложение?</string>
    <string name="contact_us_all_description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</string>
    <string name="contact_us2">Как получить расчет по страховке?</string>
</resources>