<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screen.profile.edit.EditProfileScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilory_bold"
                android:text="@string/edit_profile_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:src="@drawable/profile_edit"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_toolbar" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilory_bold"
        android:text="@string/add_profile_picture_txt"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/profile_picture"
        app:layout_constraintStart_toStartOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/gilory_bold"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_profile_name_txt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/register_edit_bg"
        android:hint="@string/name"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name_txt"
        app:layout_constraintTop_toBottomOf="@+id/name_txt" />


    <TextView
        android:id="@+id/last_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/gilory_bold"
        android:text="@string/last_name"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_name_txt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_profile_last_name_txt"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:paddingStart="12dp"

        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/last_name_txt"
        app:layout_constraintTop_toBottomOf="@+id/last_name_txt"
        android:layout_height="50dp"
        android:background="@drawable/register_edit_bg"
        android:hint="@string/last_name" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_last_name_txt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilory_bold"
            android:text="Номер телефона"
            android:textColor="#012033"
            android:textFontWeight="580"
            android:textSize="16sp" />

        <FrameLayout
            android:id="@+id/register_type_phone_container"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp">


            <TextView

                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/register_edit_bg"
                android:drawableStart="@drawable/uz_flag"
                android:drawablePadding="20dp"
                android:paddingStart="15dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/_998"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent"
                />
        </FrameLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp"

        android:textColor="@color/white"
        android:fontFamily="@font/gilory_bold"
        android:text="@string/save_profile"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>