<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.register.RegisterScreen">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="@+id/choose_container"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/choose_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilory_bold"
            android:text="@string/otp_title"

            android:textColor="#012033"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/otp_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gilory_medium"
            android:text="@string/otp_des"
            android:textColor="#A3A4A5"
            android:textFontWeight="550"
            android:textSize="16sp" />

    </LinearLayout>

    <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:cursorVisible="true"

        android:inputType="number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:bar_active_color="@color/bottom_icon_txt_color"
        app:bar_height="3dp"
        app:bar_margin="4dp"
        app:height="52dp"
        app:layout_constraintEnd_toEndOf="@+id/choose_container"
        app:layout_constraintStart_toStartOf="@+id/choose_container"
        app:layout_constraintTop_toBottomOf="@+id/choose_container"
        app:length="6"
        app:otp_box_background_active="@drawable/otp_item_bg_active"
        app:otp_box_background_error="@drawable/otp_item_bg_error"
        app:otp_box_background_inactive="@drawable/otp_item_bg"
        app:otp_box_background_success="@drawable/otp_item_bg_success"
        app:otp_text_size="24dp"
        app:width="52dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/otp_txt"
        app:layout_constraintTop_toBottomOf="@+id/otp_txt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilory_medium"
            android:text="@string/resend_otp_title"
            android:textColor="#A3A4A5" />

        <TextView
            android:id="@+id/resend_time"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/gilory_medium"
            android:text="0:00"
            android:textColor="@color/btn_color" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/check_code_otp_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/gilory_bold"
        android:text="@string/success_otp_btn_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:layout_width="40dp"
        android:id="@+id/progress_confirm"
        android:visibility="gone"
        android:elevation="2dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/check_code_otp_btn"
        app:layout_constraintEnd_toEndOf="@+id/check_code_otp_btn"
        app:layout_constraintStart_toStartOf="@+id/check_code_otp_btn"
        app:layout_constraintTop_toTopOf="@+id/check_code_otp_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>